correcoes para rodar testes
