# service/src/main/java/br/com/spacer/taskmanager/controller/TaskController.java
@@ -1,5 +1,8 @@
 package br.com.spacer.taskmanager.controller;
 
+import static java.util.concurrent.CompletableFuture.supplyAsync;
+
+import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
 import org.springframework.http.ResponseEntity;
@@ -13,17 +16,23 @@ import br.com.spacer.taskmanager.utils.ResponseEntityUtils;
 @RestController
 public class TaskController implements TasksApi {
 
-    private final Executor executor;
+    private final Executor controllersExecutors;
     private final TaskService taskService;
 
-    public TaskController(Executor executor, TaskService taskService) {
-        this.executor = executor;
+    public TaskController(Executor controllersExecutors, TaskService taskService) {
+        this.controllersExecutors = controllersExecutors;
         this.taskService = taskService;
     }
 
     @Override
+    public CompletableFuture<ResponseEntity<TaskDTO>> getTask(UUID id) {
+        return supplyAsync(() -> taskService.getTaskById(id), controllersExecutors)
+                .thenApply(ResponseEntityUtils::ok);
+    }
+
+    @Override
     public CompletableFuture<ResponseEntity<TaskDTO>> createTask(CreateTaskDTO createTaskDTO) {
-        return CompletableFuture.supplyAsync(() -> taskService.createTask(createTaskDTO), executor)
+        return supplyAsync(() -> taskService.createTask(createTaskDTO), controllersExecutors)
                 .thenApply(ResponseEntityUtils::created);
     }
 }
